<resources>
    <string name="app_name">AppNote</string>
    <string name="my_notes">My Notes</string>
    <string name="search_notes">Search notes</string>
    <string name="title_activity_create_note">CreateNoteActivity</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="title_activity_add_note">AddNoteActivity</string>
    <string name="title">Title</string>
    <string name="type_something">Type something...</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="delete">Delete</string>
    <string name="history">History</string>
    <string name="home">Home</string>
    <string name="history_menu">History</string>
    <string name="delete_menu">Delete</string>
    <string name="sort_by_title">Sort by title</string>
    <string name="sort_by_date">Sort by date</string>
</resources>