<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929"
    tools:context=".Fragment.HomeFragment">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:backgroundTint="@color/white"
        app:layout_constraintTop_toTopOf="parent"
        app:menu="@menu/menu_sort"
        app:title="@string/my_notes"
        app:titleTextAppearance="@style/Toolbar.TitleText"
        app:titleTextColor="#FFFFFF" />
    <android.widget.SearchView
        android:id="@+id/svSearch"
        android:layout_width="match_parent"
        android:layout_height="35dp"
        android:layout_marginStart="8dp"
        android:layout_marginEnd="8dp"
        android:background="@drawable/background_search"
        app:layout_constraintTop_toBottomOf="@id/toolBar"
        app:queryHint="@string/search_notes"
        app:iconifiedByDefault="false"/>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/recycleViewNotes"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginEnd="20dp"
        android:padding="10dp"
        android:scrollbars="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toBottomOf="@id/svSearch" />

    <ImageView
        android:id="@+id/ivAdd"
        android:layout_width="60dp"
        android:layout_height="60dp"
        android:layout_marginEnd="30dp"
        android:layout_marginBottom="30dp"
        android:background="@drawable/background_add_button"
        android:contentDescription="@string/app_name"
        android:padding="5dp"
        android:src="@drawable/ic_add"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="@color/white" />

</androidx.constraintlayout.widget.ConstraintLayout>