<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#292929"
    tools:context=".Fragment.CreateNoteFragment">

    <ImageView
        android:id="@+id/ivBack"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_back"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:tint="#DBDBDB" />

    <ImageView
        android:id="@+id/ivDone"
        android:layout_width="30dp"
        android:layout_height="30dp"
        android:layout_marginStart="15dp"
        android:layout_marginEnd="30dp"
        android:contentDescription="@string/app_name"
        android:src="@drawable/ic_done"
        app:layout_constraintBottom_toBottomOf="@id/ivBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:tint="#DBDBDB" />

    <EditText
        android:id="@+id/etTitle"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:hint="@string/title"
        android:importantForAutofill="no"
        android:inputType="text"
        android:textColor="@color/white"
        android:textColorHint="#7B7B7B"
        android:textSize="40sp"
        app:layout_constraintTop_toBottomOf="@id/ivBack" />

    <TextView
        android:id="@+id/tvTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:textColor="#A4A4A4"
        android:textSize="15sp"
        app:layout_constraintEnd_toEndOf="@id/etTitle"
        app:layout_constraintStart_toStartOf="@id/etTitle"
        app:layout_constraintTop_toBottomOf="@id/etTitle"/>

    <EditText
        android:id="@+id/etDescription"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="20dp"
        android:layout_marginEnd="15dp"
        android:background="@null"
        android:gravity="top"
        android:hint="@string/type_something"
        android:importantForAutofill="no"
        android:inputType="textMultiLine"
        android:minHeight="100dp"
        android:textColor="@color/white"
        android:textColorHint="#7B7B7B"
        android:textSize="20sp"
        app:layout_constraintTop_toBottomOf="@id/tvTime" />

</androidx.constraintlayout.widget.ConstraintLayout>